# rust-templates

./: .env.template  .gitignore  Cargo.toml  justfile
configs/: prod.template.toml
deployment/: docker-compose.yaml
src/: api.rs  domain.rs  main.rs
src/api/: controllers.rs
src/api/controllers/: healthcheck.rs
src/api/controllers/responses/: base.rs
src/domain/: code.rs  common.rs
tg-bot-template/: .env.template  Cargo.toml  justfile
tg-bot-template/configs/: dev.template.toml  prod.template.toml
tg-bot-template/deployment/: docker-compose.yaml
tg-bot-template/migration/: Cargo.toml
tg-bot-template/migration/src/: m20220101_000001_create_table.rs  main.rs
tg-bot-template/src/: config.rs  di.rs  main.rs
tg-bot-template/src/application/: mod.rs
tg-bot-template/src/application/common/: interactor.rs  mod.rs
tg-bot-template/src/application/db/: errors.rs  tx_manager.rs
tg-bot-template/src/application/user/: dtos.rs  interactors.rs  interfaces.rs  mod.rs
tg-bot-template/src/bot/handlers/: start.rs
tg-bot-template/src/bot/middlewares/: create_user.rs
tg-bot-template/src/domain/: mod.rs
tg-bot-template/src/domain/common/: errors.rs
tg-bot-template/src/domain/user/: entities.rs  errors.rs
tg-bot-template/src/infra/db/: errors.rs  mod.rs
tg-bot-template/src/infra/db/models/: users.rs
tg-bot-template/src/infra/db/readers/: user.rs
tg-bot-template/src/infra/db/repos/: user.rs
tg-bot-template/src/infra/db/tx_manager/: factories.rs  mod.rs
web-template/: Cargo.toml  justfile
web-template-migration/: Cargo.toml
web-template-migration/src/: m20220101_000001_create_table.rs
web-template/configs/: dev.template.toml
web-template/migration/: Cargo.toml  README.md
web-template/migration/src/: lib.rs  main.rs
web-template/src/: application.rs  config.rs  di.rs  domain.rs  main.rs
web-template/src/api/: controllers.rs  errors.rs  mod.rs
web-template/src/api/controllers/: fallback.rs  healthcheck.rs  mod.rs  users.rs
web-template/src/api/controllers/default/: mod.rs
web-template/src/api/controllers/healthcheck/: mod.rs
web-template/src/api/controllers/responses/: base.rs
web-template/src/api/controllers/responses/base/: mod.rs  serializer.rs
web-template/src/api/controllers/users/: mod.rs
web-template/src/api/extractors/: responses.rs
web-template/src/application/: common.rs  db.rs  user.rs
web-template/src/application/common/: entities.rs  interactor.rs
web-template/src/application/db/: errors.rs  tx_manager.rs
web-template/src/application/user/: dtos.rs  interactors.rs  interfaces.rs
web-template/src/application/user/dtos/: mod.rs
web-template/src/di/: mod.rs
web-template/src/domain/: code.rs  user.rs
web-template/src/domain/code/: constants.rs  entities.rs  entity.rs  interfaces.rs
web-template/src/domain/code/constants/: mod.rs
web-template/src/domain/common/: errors.rs
web-template/src/domain/user/: entities.rs  entity.rs  errors.rs  exceptions.rs
web-template/src/infra/: db.rs
web-template/src/infra/db/: errors.rs  tx_manager.rs
web-template/src/infra/db/models/: users.rs
web-template/src/infra/db/readers/: user.rs
web-template/src/infra/db/readers/user/: mod.rs
web-template/src/infra/db/repos/: user.rs
web-template/src/infra/db/repos/user/: mod.rs
web-template/src/infra/db/tx_manager/: factories.rs
web-template/src/utils/: mod.rs  serde.rs
web-template/src/utils/serde/: mod.rs
web-template/src/utils/shutdown/: mod.rs
