[package]
name = "web_template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1.1.2"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1"
serde_json = "1.0"
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-rapidoc = { version = "6", features = ["axum"] }
time = { version = "0.3", features = ["serde-human-readable"] }
sea-orm = { version = "1.1", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid"] }
