[package]
name = "web_template"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1.1"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.23", features = ["serde", "v7"] }
utoipa = { version = "5.4", features = ["time", "uuid"] }
utoipa-axum = "0.2"
utoipa-rapidoc = { version = "6", features = ["axum"] }
time = { version = "0.3", features = ["serde-human-readable"] }
sea-orm = { version = "1.1", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid"] }
froodi = { version = "1.0.0-beta.17", features = ["async", "thread_safe", "axum"] }
