[package]
name = "web_template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
froodi = { version = "1.0.0-beta.17", features = ["async", "thread_safe", "axum"] }
sea-orm = { version = "1.1", features = ["macros", "sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["time", "uuid"] }
utoipa-axum = "0.2"
utoipa-rapidoc = { version = "6", features = ["axum"] }
uuid = { version = "1.23", features = ["serde", "v7"] }
