[package]
name = "tg_bot_template_migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "tg_bot_template_migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "2.0.0-rc.38", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
